from dataclasses import dataclass


@dataclass
class MondayBoard:
	pass
