@startuml
'https://plantuml.com/class-diagram

class PDF <<(D, orchid) dataclass>> {
    Stores extracted data from PDF files
    -- Instance Variables --
    + pdf_name: string
    + file_path: string
    - total: float
    - date: string YYYY-MM-DD
    + vendor: string
    -- Properties--
    + total(extracted_total: Union[string, int, float]): void
    + date(extracted_date: Union[string, datetime.date]): void
}

class PDFError <<(X, red) exception>> {
    -message: string
    -original_exception: Exception
}

class PDFProcessingManager {
    Manages the processing of pdf data
    -- Class Variables --
    - pdf_counter: int // Show progress when retrieving pdfs
    -- Instance Variables --
    + pdf_proc_mng_df: pd.DataFrame(columns=['File Name', 'File Path', 'Amount', 'Vendor', 'Date'])
    - text_processor: PDFProcessor
    - ocr_processor: PDFProcessor
    -- Methods --
    + remove_pdf_proc_mng_df_row(pdf_name: string): void
    + clear_pdf_proc_mng_df(): void
    + get_pdf_proc_mng_df(): pdf_proc_mng_df: DataFrame
    - reset_counter(pdf: PDF): void
    - add_pdf(pdf: PDF): void
    - log_pdf_processing_details(self, pdf: PDF, pattern_used_pdf_amount: string, pattern_used_ocr_amount: string, pattern_used_pdf_date: string, pattern_used_ocr_date: string): void
    - select_processor_and_extract_total(pdf: PDF): void // Calls the total extraction methods in the correct sequence
    - select_processor_and_extract_date(): void // Calls the date extraction methods in correct sequence
    - proces_pdf(pdf_path: string, pdf_name: string): void
    + populate_pdf_proc_mng_df(invoice_worksheet: Worksheet, xlookup_table_worksheet: Worksheet): void
}

abstract PDFProcessor {
    -- Class Variables --
    - FALL_BACK_TOTAL = float
    - FALL_BACK_DATE = datetime
    - FALL_BACK_VENDOR = string
    -- Instance Variables --
    - start_date: string
    - end_date: string
    - vendors_list: List
    -- Methods --
    + {abstract} extract_total(pdf: PDF): return pattern
    + {abstract} extract_date(pdf: PDF): return pattern
    + get_vendors_from_xlookup_worksheet(xlookup_table_worksheet: Worksheet): void // populates the vendors_list to be able to extract pdf.vendor.
    + extract_vendor(pdf: PDF): void
}

class PDFPlumberProcessor extends PDFProcessor{
    -- Instance Variables --
    - vendor_specific_pattern: VendorSpecificPatternProvider
    - general_pattern: GeneralPatternProvider
    -- Methods --
    + extract_total(...): pattern
    + extract_date(...): pattern
}

class PDFOCRProcessor extends PDFProcessor{
    -- Instance Variables --
    - general_pattern: GeneralPatternProvider
    -- Methods --
    + extract_total(...): pattern
    + extract_date(...): pattern
}

class GeneralPatternProvider <<(P, pink) protocol >> {
    --Methods--
    + get_total_pattern(): List[str]
    + get_date_pattern(): List[str]
}

class VendorSpecificPatternProvider <<(P, pink) protocol >> {
    --Methods--
    + get_total_pattern(pdf_text: str): List[str]
    + get_date_pattern(pdf_text: str): List[str]
}

class GeneralPattern implements GeneralPatternProvider {
    --Class Variables--
    - TOTAL_PATTERNS = List
    - DATE_PATTERNS = List
    --Methods--
    + get_total_pattern(): List[str]
    + get_date_pattern(): List[str]
}

class VendorSpecificPattern implements VendorSpecificPatternProvider {
    --Class Variables--
    - VENDOR_PATTERNS = dict
    --Methods--
    + get_total_pattern(pdf_text: str): List[str]
    + get_date_pattern(pdf_text: str): List[str]
}

class Worksheet {
    Utilizes xlwings to interact with Excel and pandas for DataFrame operations
    -- Instance Variables --
    - name: string
    - sheet: xlwings.Sheet // Usage needed to provide access to the underlying excel sheet, dataframe used as intermediary to manipulate data
    - worksheet_dataframe: pandas.DataFrame
    - strategy: Optional[UpdateStrategy]
    -- Methods --
    + set_strategy(strategy: UpdateStrategy): void
    + read_data_as_dataframe(): pandas.DataFrame // Reads data from sheet reference to and returns a dataframe of the sheet
    + update_sheet(dataframe: pandas.DataFrame, progress_bar): void // writes manipulated dataframe back into Excel sheet
}

class Workbook {
    Manages Worksheets with xlwings
    -- Instance Variables --
    - worksheets: dict<string, Worksheet>
    + Workbook(workbook_path: string)  // Constructor now takes a path to open or create a workbook
    -- Methods --
    + add_worksheet(worksheet_name: string): void
    + remove_worksheet(worksheet_name: string): void
    + remove_all_worksheets_dict(): void
    + get_worksheet(worksheet_name: string): worksheets[worksheet_name: string]
    + get_all_worksheets(): worksheets
    + save(save_path: None): void  // Method to save changes to the workbook to same location, but when parameter passed saves to different location
    + close(): void
    + call_macro_workbook(macro_name: string, macro_parameter_1: string, macro_parameter_2: string): void
}

abstract WorkbookManager {
    + workbook_name: string
    + workbook_path: string
    + workbook : Workbook
    + {abstract} select_worksheet_strategy(worksheet_name: String) : UpdateStrategy
    + get_worksheet(worksheet_name: String) : Worksheet
}

class TemplateWorkbookManager extends WorkbookManager{
    + select_worksheet_strategy(...) : UpdateStrategy
}

class AmexWorkbookManager extends WorkbookManager{
    + select_worksheet_strategy(...) : UpdateStrategy
}

abstract UpdateStrategy {
    + {abstract} update_worksheet(worksheet : Worksheet, data : Union[pd.DataFrame, Worksheet]) : void
}

class TemplateTransactionDetails2UpdateStrategy extends UpdateStrategy{
    + update_worksheet(...) : void
}

class TemplateInvoiceUpdateStrategy extends UpdateStrategy{
    + update_worksheet(...) : void
}

class AmexTransactionDetailsUpdateStrategy extends UpdateStrategy{
    + update_worksheet(...) : void
}


class InvoiceMatchingManager {
   Handles the complex data manipulation tasks for AmexAutomationOrchestrator; dependency injection used here
   -- Instance Variables --
   - invoice_df: Optional[pd.DataFrame] = None
   - transaction_details_df: Optional[pd.DataFrame] = None
   + matched_transactions: set[int]
   + matched_invoices: set[Hashable] // Set of indexes from the DataFrame's rows, indicating which invoices have been matched
   end note
   - primary_strategies: List[MatchingStrategy]
   - fallback_strategy: MatchingStrategy
   -- Methods --
   + set_data(invoice_df: pd.DataFrame, transaction_details_df: pd.DataFrame): void
   + execute_invoice_matching(): void
   + sequence_file_names(): void
}

abstract MatchingStrategy {
    -- Methods --
    + {abstract} execute(invoice_row: pd.Series, transaction_details_df: pd.DataFrame, matched_transactions: set[int], matched_invoices: set[Hashable]): boolean
    - {static} load_invoice_data(invoice_row: pd.Series): Tuple
    - {static} add_match(transaction_details_df: pd.DataFrame, found_match_index: int, file_name: string, file_path: string, match_type: string, matched_transactions: set[int], matched_invoices: set[Hashable], invoice_row_index: int): void
}

class ExactAmountDateStrategy extends MatchingStrategy{
    + execute(...): boolean
}

class ExactAmountAndExcludeDateStrategy extends MatchingStrategy{
    + execute(...): boolean
}

class CombinationTotalStrategy extends MatchingStrategy{
    + execute(...): boolean
}

class VendorOnlyStrategy extends MatchingStrategy{
    + execute(...): boolean
}

class AmexAutomationOrchestrator {
    Acts as the facade
    Coordinating workflow between different components (processing invoices and transactions).
    Integrating different parts of the system (PDF handling, transaction processing, Excel integration).
    -- Instance Variables --
    + system_config: SystemConfigurations()
    + pdf_proc_mng: PDFProcessingManager(PDFPlumberProcessor(system_config.start_date, system_config.end_date, system_config.vendor_specific_pattern, system_config.general_pattern), PDFOCRProcessor(system_config.start_date, system_config.end_date, system_config.general_pattern))
    + invoice_matching_manager: InvoiceMatchingManager()
    + template_workbook_manager: TemplateWorkbookManager()
    + amex_workbook_manager: AmexWorkbookManager()
    -- Methods --
    + prepare_template_workbook(): void
    + process_invoices_worksheet(): void // Processes the Invoice Worksheet with data extracted and uploaded into PDFProcessingManager dataframe
    + process_transaction_details_2_worksheet(): void
    + process_amex_transaction_details_worksheet(): void
}

class SystemConfigurations <<(D, orchid) dataclass>> {
    -- Instance Variables --
    + start_date: string
    + end_date: string
    + macro_parameter: string
    + template_x_lookup_table_worksheet_name: string
    + template_invoices_worksheet_name: string
    + template_transaction_details_2_worksheet_name: string
    + amex_transaction_details_worksheet_name: string
    + template_list_invoice_name_and_path_macro_name: string
    + template_resize_table_macro_name: string
    + amex_template_workbooks_path: string
    + template_workbook_name: string
    + amex_workbook_path: string
    + template_workbook_path: string
    + vendor_specific_pattern : VendorSpecificPattern
    + general_pattern: GeneralPattern

}

class SystemConfigurationsError <<(X, red) exception>> {
    -message: string
    -original_exception: Exception
}

class ProgressTrackingMixin {
    -- Instance Variables --
    - progress_bar: tqdm
    -- Methods --
    + start_progress_tracking(total_steps: int, description: string): void
    + update_progress(steps: int = 1): void
    + complete_progress(): void
}

class MondayBoard <<(D, orchid), dataclass_json>> {

}

class DataFrameAdapter {

}


Workbook *--> "1..*" Worksheet : contains

PDF ..> PDFError : throws
SystemConfigurations ..> SystemConfigurationsError : throws

PDFProcessingManager o--> "1..*" PDF : contains aggregate
PDFProcessingManager *..> PDFProcessor : uses dependency injection and dependency inversion

AmexAutomationOrchestrator *..> InvoiceMatchingManager : orchestrates
AmexAutomationOrchestrator *..> WorkbookManager : utilizes Composition
AmexAutomationOrchestrator *..> PDFProcessingManager : orchestrates
AmexAutomationOrchestrator *..> SystemConfigurations : utilizes Composition
AmexAutomationOrchestrator *..> DataFrameAdapter : orchestrates

InvoiceMatchingManager ..|> ProgressTrackingMixin : utilizes Mixin
InvoiceMatchingManager *..> MatchingStrategy : uses dependency injection & dependency inversion

UpdateStrategy ..|> ProgressTrackingMixin : utilizes Mixin

Worksheet *..> "1..1" UpdateStrategy : contain

WorkbookManager *--> "1..1" Workbook : creates
WorkbookManager ..> UpdateStrategy : sets

PDFPlumberProcessor *..> VendorSpecificPatternProvider: uses dependency injection & dependency inversion
PDFPlumberProcessor *..> GeneralPatternProvider: uses dependency injection & dependency inversion
PDFOCRProcessor *..> GeneralPatternProvider: uses dependency injection & dependency inversion

DataFrameAdapter *..> MondayBoard : utilizes

@enduml
